--- a/src/App/components/SelectInteraction/InteractionsList/InteractionsListRow/InteractionsDetails/interactionsDetails.scss
+++ b/src/App/components/SelectInteraction/InteractionsList/InteractionsListRow/InteractionsDetails/interactionsDetails.scss
@@ -1,3 +1,4 @@
+@import url("SendEmailModal/sendEmailModal.scss");
 .interactions-details {
   box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.0784313725);
   &__content {
