feat:<fix figma>

--- a/src/UIKit/Filters/FilterItems/FilterItemWrapper/filterItemWrapper.scss
+++ b/src/UIKit/Filters/FilterItems/FilterItemWrapper/filterItemWrapper.scss
@@ -9,9 +9,9 @@
     cursor: pointer;
     border-radius: 7px;
 
-    &:hover {
-      background-color: #eeeeee;
-    }
+    // &:hover {
+    //   background-color: #eeeeee;
+    // }
   }
 
   &__title {
