--- a/src/App/components/SelectInteraction/ListComponents/ListHeaderColumn/listHeaderColumn.scss
+++ b/src/App/components/SelectInteraction/ListComponents/ListHeaderColumn/listHeaderColumn.scss
@@ -1,38 +1,32 @@
 .list-header-column {
+  display: flex;
+  flex-direction: row;
+  gap: 4px;
+  align-items: center;
+  justify-content: start;
+
+  &__title {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 11px;
+    color: #565a62;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  &__button {
+    outline: none;
+    background: none;
+    border: none;
+    cursor: pointer;
     display: flex;
-    flex-direction: row;
-    gap: 4px;
     align-items: center;
-    justify-content: start;
 
-    &__title {
-        font-family: 'Inter';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 11px;
-        color: #565A62;
-        overflow: hidden;
-		text-overflow: ellipsis;
-		white-space: nowrap;
+    & > span {
+      display: flex;
+      align-items: center;
     }
-
-    &__button {
-        outline: none;
-        background: none;
-        width: fit-content;
-        height: fit-content;
-        border: none;
-        cursor: pointer;
-
-        display: flex;
-
-        & > span {
-            display: flex;
-            align-items: center;
-        }
-
-        & > span:first-of-type {
-            transform: rotate(180deg);
-        }
-    }
+  }
 }
