--- a/src/App/components/SelectInteraction/PageSelector/pageSelector.scss
+++ b/src/App/components/SelectInteraction/PageSelector/pageSelector.scss
@@ -1,123 +1,123 @@
 .page-selector {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  &__button-wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    align-items: center;
+
+    & .loader__element {
+      border-color: #a4a7ae;
+      border-bottom-color: transparent;
+    }
+
+    &_button {
+      grid-area: 1 / 2 / 2 / 3;
+      justify-self: center;
+      width: 163px;
+      height: 40px;
+      background: #d5d7da;
+      border-radius: 999px;
+      border: none;
+
+      font-family: "Inter";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 20px;
+      color: #303337;
+
+      cursor: pointer;
+    }
+
+    &_counter {
+      grid-area: 1 / 3 / 2 / 4;
+      justify-self: end;
+
+      font-family: "Inter";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 20px;
+      color: #717680;
+    }
+  }
+
+  &__selector {
     display: flex;
-    flex-direction: column;
-    gap: 20px;
+    flex-direction: row;
+    justify-content: center;
+    gap: 8px;
 
-    &__button-wrapper {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: 1fr;
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
-        align-items: center;
+    &_left-arrow,
+    &_right-arrow {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 999px;
+      width: 40px;
+      height: 40px;
+      cursor: pointer;
+      border: none;
+      background-color: #d5d7da;
 
-        & .loader__element {
-            border-color: #A4A7AE;    
-            border-bottom-color: transparent;    
+      &:hover {
+        background-color: #bec1c5;
+
+        & path {
+          stroke: #303337;
         }
-
-        &_button {
-            grid-area: 1 / 2 / 2 / 3;
-            justify-self: center;
-            width: 163px;
-            height: 40px;   
-            background: #D5D7DA;
-            border-radius: 999px;
-            border: none;
-            
-            font-family: 'Inter';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 14px;
-            line-height: 20px;
-            color: #303337;
-
-            cursor: pointer;
-        }
-
-        &_counter {
-            grid-area: 1 / 3 / 2 / 4;
-            justify-self: end;
-            
-            font-family: 'Inter';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 14px;
-            line-height: 20px;
-            color: #717680;
-        }
+      }
     }
 
-    &__selector {
+    &_right-arrow {
+      transform: rotate(180deg);
+    }
+
+    &_pages {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+
+      & > * {
         display: flex;
-        flex-direction: row;
+        align-items: center;
         justify-content: center;
-        gap: 8px;
 
-        &_left-arrow,
-        &_right-arrow {
-            background-color: transparent;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 999px;
-            width: 40px;
-            height: 40px;
-            cursor: pointer;
-            border: none;
+        height: 40px;
+        width: 40px;
+        background-color: transparent;
 
-            &:hover {
-                background-color: #D5D7DA;
+        border-radius: 999px;
 
-                & path {
-                    stroke: #303337
-                }
-            }
+        font-weight: 400;
+        font-family: "Inter";
+        user-select: none;
+      }
+
+      & > button {
+        cursor: pointer;
+        border: none;
+
+        &:hover {
+          background-color: #d5d7da;
         }
+      }
 
-        &_right-arrow{
-            transform: rotate(180deg);
+      & > .active-page {
+        background-color: #1570ef;
+        color: white;
+
+        &:hover {
+          background-color: #1570ef;
+          color: white;
         }
-
-        &_pages {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-
-            & > * {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                
-                height: 40px;
-                width: 40px;
-                background-color: transparent;
-
-                border-radius: 999px;
-
-                font-weight: 400;
-                font-family: 'Inter';
-                user-select: none;
-            }
-
-            & > button {
-                cursor: pointer;
-                border: none;
-
-                &:hover {
-                    background-color: #D5D7DA;
-                }
-            }
-
-            & > .active-page {
-                background-color: #1570EF;
-                color: white;
-
-                &:hover {
-                    background-color: #1570EF;
-                    color: white;
-                }
-            }
-        }
+      }
     }
+  }
 }
