--- a/src/App/components/SelectInteraction/InteractionsList/InteractionsList.scss
+++ b/src/App/components/SelectInteraction/InteractionsList/InteractionsList.scss
@@ -1,5 +1,5 @@
 @import url("InteractionsListRow/interactionsListRow.scss");
-
+@import url("SendEmailModal/sendEmailModal.scss");
 .interactions-list {
   display: flex;
   flex-direction: column;
