--- a/src/App/components/SelectInteraction/InteractionsList/SendEmailModal/sendEmailModal.scss
+++ b/src/App/components/SelectInteraction/InteractionsList/SendEmailModal/sendEmailModal.scss
@@ -8,6 +8,7 @@
   background-color: #ffffff;
   box-shadow: 0 8px 32px 0 #0a0d121f;
   margin: 24px;
+  font-family: "Inter";
 
   display: flex;
   flex-direction: column;
