--- a/src/UIKit/Filters/FilterItems/FilterItemDates/filterItemDates.scss
+++ b/src/UIKit/Filters/FilterItems/FilterItemDates/filterItemDates.scss
@@ -7,4 +7,12 @@
     flex-direction: row;
     gap: 12px;
   }
+
+  &__error {
+    font-family: "Inter";
+    color: #d92d20;
+    font-size: 11px;
+    font-weight: 400;
+    line-height: 14px;
+  }
 }
